--- a/default.conf
+++ b/default.conf
@@ -26,7 +26,8 @@ server {
 			return 204;
 		}
         # proxy_pass http://127.0.0.1:8002;  # 後端伺服器的地址
-        proxy_pass http://host.docker.internal:8002;
+        # proxy_pass http://host.docker.internal:8002;
+        proxy_pass http://backend:8002;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
